# gtranscoder

./: .gitignore  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  gtranscoder.desktop.in  one_step_build.sh
pixmaps/: Makefile.am
po/: ChangeLog  Makevars  POTFILES.in  gtranscoder.pot
src/: Makefile  Makefile.am  application.c  application.h  gtranscoder-error.c  gtranscoder-error.h  main.c  transcoding.c  transcoding.h
